[gd_scene load_steps=13 format=3 uid="uid://bbpgjy31uekqm"]

[ext_resource type="Script" uid="uid://c2ht743k7aval" path="res://scripts/proc_terra.gd" id="1_kq7s7"]
[ext_resource type="Texture2D" uid="uid://beu4kync8qu0q" path="res://assets/terra_pallet.png" id="2_kq7s7"]
[ext_resource type="PackedScene" uid="uid://nt74txyyhp2d" path="res://scenes/player.tscn" id="3_cv10t"]

[sub_resource type="Gradient" id="Gradient_3ehfv"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kq7s7"]
noise_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ytlbh"]
color_ramp = SubResource("Gradient_3ehfv")
noise = SubResource("FastNoiseLite_kq7s7")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3ehfv"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cv10t"]
noise = SubResource("FastNoiseLite_3ehfv")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tf8kn"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tf8kn"]
noise = SubResource("FastNoiseLite_tf8kn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tf8kn"]
texture = ExtResource("2_kq7s7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_3ehfv"]
sources/0 = SubResource("TileSetAtlasSource_tf8kn")

[node name="proc_terra" type="Node2D"]
script = ExtResource("1_kq7s7")
noise_texture = SubResource("NoiseTexture2D_ytlbh")
tectonic_noise_texture = SubResource("NoiseTexture2D_cv10t")
volcanic_noise_texture = SubResource("NoiseTexture2D_tf8kn")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3ehfv")
format = 2

[node name="OceanicLayer" type="TileMapLayer" parent="TileMap"]
tile_set = SubResource("TileSet_3ehfv")

[node name="WaterLayer" type="TileMapLayer" parent="TileMap"]
tile_set = SubResource("TileSet_3ehfv")

[node name="ContinentalLayer" type="TileMapLayer" parent="TileMap"]
tile_set = SubResource("TileSet_3ehfv")

[node name="VolcanicLayer" type="TileMapLayer" parent="TileMap"]
tile_set = SubResource("TileSet_3ehfv")

[node name="Player" parent="." instance=ExtResource("3_cv10t")]
SPEED = 300.0

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -6)
